sorry wrong background color, fixed

--- a/src/assets/reset.css
+++ b/src/assets/reset.css
@@ -28,7 +28,7 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	vertical-align: baseline;
-	color: #C5D2CE;
+	color: #000000;
 }
 body{
 	overflow-x: hidden; /* Prevent horizontal scrolling */
@@ -41,7 +41,7 @@ footer, header, hgroup, menu, nav, section {
 
 body {
 	line-height: 1;
-	background-color: #FFFFFF;
+	background-color: #C5D2CE;
 	background-size: cover;
 	background-position: center;
 }
